--- a/css/9. signup_page.html/style.css
+++ b/css/9. signup_page.html/style.css
@@ -1,53 +1,125 @@
-*{
-    margin: 0;
-    padding: 0;
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
+
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    /* border: 2px solid blue; */
 }
 
-.innerdiv{
-    position: absolute;
-    top: 20vh;
-    left: 40vw;
-    background-color: green;
-    border-radius: 9px;
-    width: auto;
-    height: 50vh;
-    padding: 50px 20px;
-    /* align-items: center;
-    align-self: left; */
+body {
+    font-family: "Lato", sans-serif;
 }
 
-h1{
-    font-size: 1.5rem;
-    text-align: center;
-    padding: 10px;
+.outer-box{
+
+    /* giving full screen to the outer-box */
+    width: 100vw;
+    height: 100vh;
+    /* border: 2px solid red; */
+
+    /* adding liner-gradiant */
+    background: linear-gradient(to top left, #5390d9, #80ffdb);
+    
 }
 
-input[type=text], input[type=password], input[type=email]{
-    display: block;
-    /* margin: 10px 8%; */
-    font-size: 1.5rem;
-    /* padding: 20px; */
-    margin: 30px 0px;
-    width: 100%;
-    border-radius: 8px;
-}
+.inner-box{
+    /* border: 2px solid red; */
+    width: 400px;
+    /* giving 0 margin to top and bottom and adding auto to the left and right */
+    /* by giving auto it comes in the middle of the parrent element in this case outer-box*/
+    margin: 0px auto;
 
-input[type=checkbox]{
-    /* left: 30px;
     position: relative;
-    float: left; */
-    display: inline;
+    top:40%;
+    /* by the above code inner box will start from the 50% of the height of the outer-box */
+    /* now to bring our 50% inner-box above  */
+    transform: translateY(-50%);
+
+    /* adding some padding */
+    padding: 20px 40px;
+
+    /* background-color: white; */
+    /* background-color: #ffffff09; */
+    background: linear-gradient(to top left, #ffffffff, #ffffff03);
+    border-radius: 8px;
+
+    /* adding shadow to our inner box */
+    box-shadow: 2px 2px 5px rgb(32, 32, 32);
+
+    z-index: 2;
+    backdrop-filter: blur(8px);
+
 }
 
-label{
-    display: inline;
-    /* position: absolute; */
+.signup-header h1{
+    font-size: 2.5rem;
+    color: #00296b;
+
 }
-button{
+
+.signup-header p{
+    font-size: 0.8rem;
+    color: #00509d;
+}
+
+.signup-body{
+    margin: 20px 0px;
+}
+
+.signup-body p{
+    margin: 10px 0px;
+}
+
+.signup-body label{
     display: block;
-    /* border: none; */
-    border-radius: 9px;
-    margin: 50px 0px;   
+    color: #003f88;
+    font-weight: bold;
+}
+
+.signup-body input{
     width: 100%;
-    height: 50px;
+    padding: 10px;
+    border: 2px solid #00296b;
+    border-radius: 5px;
+    margin-top: 4px;
+}
+
+.signup-body input[type="submit"] {
+    background-color: #00a6fb;
+    border: none;
+    color: white;
+    cursor: pointer;
+}
+
+.signup-body input[type="submit"]:hover{
+    background-color: #006494;
+}
+
+.signup-footer p{
+    color: #272869;
+    text-align: center;
+}
+
+.signup-footer p a{
+    color: #272869;
+}
+
+/* designing our circle */
+.circle {
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
+    background: linear-gradient(to top right, #66CED6, white);
+    position: absolute;
+}
+
+.c1 {
+    top: 100px;
+    left: 50px;
+}
+
+.c2{
+    bottom: 200px;
+    right: 100px;
 }
